--- a/Javascript/practise_js/1. pra_dtype.html
+++ b/Javascript/practise_js/1. pra_dtype.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>datatype</title>
 </head>
+
 <body>
     <h1>what is data types</h1>
-    
+
 
 
 
@@ -38,17 +40,30 @@
 
 
         // day 3
-        let string = "my name is shubham";
-        let numbers = 1234567;
-        let bool = false
-        let float = 22.55
-        let int = 43
-        let nums = 123456n
-        let numss = null
-        let nummms;
+        // let string = "my name is shubham";
+        // let numbers = 1234567;
+        // let bool = false
+        // let float = 22.55
+        // let int = 43
+        // let nums = 123456n
+        // let numss = null
+        // let nummms;
 
-        console.log(string);
-        console.log(typeof numbers);
+        // console.log(string);
+        // console.log(typeof numbers);
+
+        // day 4
+        let num = 123456;
+        let str_text = "my name is shubham"
+        let float = 2444.53;
+        let nums = 123456n;
+        let bloolian = true;
+        let numss = null;
+        let shub;
+
+        console.log(num);
+        console.log(typeof num);
     </script>
 </body>
+
 </html>
