--- a/Javascript/practise_js/2. prac_varibles.html
+++ b/Javascript/practise_js/2. prac_varibles.html
@@ -26,7 +26,7 @@
 
 
         // // const varibles
-        // a = {"d":["meshram","shubham"]}
+        // const a = {"d":["meshram","shubham"]}
         // const str = "shubham"
         // const numeber = 1234567
         // const numbers = ["shubha","meshram","gondia"] 
@@ -138,37 +138,93 @@
 
 
         // day 3 
-        var tupples = (1, 23, 44, 6);
-        let list_and_arr = [1, 2, 3, 4, 5, 6, 4];
-        const object_o = {
-            brand: "dell",ram: 8,storage: 512,price: 70000
-        };
-        var object_oo = {
-            name:"shubham",propfil:"data abalyst",salary: 150000
-        };
+        // var tupples = (1, 23, 44, 6);
+        // let list_and_arr = [1, 2, 3, 4, 5, 6, 4];
+        // const object_o = {
+        //     brand: "dell",ram: 8,storage: 512,price: 70000
+        // };
+        // var object_oo = {
+        //     name:"shubham",propfil:"data abalyst",salary: 150000
+        // };
 
-        console.log(list_and_arr);
-        console.log(typeof list_and_arr);
+        // console.log(list_and_arr);
+        // console.log(typeof list_and_arr);
 
-        // slicing and indexig
-        console.log(list_and_arr[0]);
-        console.log(list_and_arr[list_and_arr.length-1]);
-        console.log(list_and_arr.slice(2,4));
-
-
-        console.log(object_o);
-        console.log(typeof object_o);
-
-        // change in object name like dell to lenovo
-        object_o.brand = "lenovo"
-        object_oo.name = "labham"
+        // // slicing and indexig
+        // console.log(list_and_arr[0]);
+        // console.log(list_and_arr[list_and_arr.length-1]);
+        // console.log(list_and_arr.slice(2,4));
 
 
-        var laptop;
+        // console.log(object_o);
+        // console.log(typeof object_o);
 
-        laptop = prompt("this is dell laptop brand")
+        // // change in object name like dell to lenovo
+        // object_o.brand = "lenovo"
+        // object_oo.name = "labham"
 
-        alert(object_o + ' '+ "details"+ ' '+ laptop)
+
+        // var laptop;
+
+        // laptop = prompt("this is dell laptop brand")
+
+        // alert(object_o + ' '+ "details"+ ' '+ laptop)
+
+        // day 4 
+        // varibles is js
+
+        let tuples = (1,3,5,6,7);
+        let arrays = [1,3,4,5,67];
+        let ojects_array = ["s","b","h","5"];
+        const fixt_nam = 34;
+        var objcet_var = {name:"laptop" , brand:"dell",price: 70000,ram:"8gb"};
+        var object_nated = {electonic:{name:"laptop" , brand:"dell",price: 70000,ram:"8gb"}};
+        let dict = {b:{a:[12,33,5,66]}};
+
+        // console.log(arrays);
+        // console.log(typeof arrays)
+        // console.log(dict);
+        // console.log(typeof dict);
+
+
+        // naming conversation
+        // camalcase
+        let first_name = "Aachal";
+
+        // pascase
+        let last_name = "Verma";
+
+        // snakcase
+        let middel_name = "Sujita";
+
+        // age 
+        const age = 22;
+
+        // job profile
+        let job_tatails = "web development";
+
+        // id number
+        let id_number = "2356788";
+
+        // payment status
+        let ispaid = true;
+
+
+        // mode by payment
+        let mode_by_payment;
+
+        // prompt
+
+        mode_by_payment = prompt("mode by payment")
+
+        // output the user
+        alert(first_name+last_name+age+ispaid+mode_by_payment);
+
+
+
+
+        
+
 
 
         
