new project websit

--- a/Projects/amazon clone/index.html
+++ b/Projects/amazon clone/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -78,12 +79,25 @@
 
 
     <!-- hero-section -->
+    <!-- Flickity HTML init -->
+    <!-- <div class="carousel" data-flickity='{ "autoPlay": true }'> -->
+    <!-- <div class="carousel-cell"><img src="1.jpg" alt=""  ></div>
+    <div class="carousel-cell"><img src="2.jpg" alt="" ></div>
+    <div class="carousel-cell"><img src="3.jpg" alt="" ></div>
+    <div class="carousel-cell"><img src="4.jpg" alt="" ></div> -->
+
+
+    </div>
+
     <div class="hero-section">
         <div class="hero-msg">
             <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local
                 delivery. <a>Click here to go to amazon.in</a></p>
         </div>
+
     </div>
+
+
 
     <!-- shop-section -->
     <div class="shop-section">
@@ -209,8 +223,8 @@
         <a class="pa4">Your Ads Privacy Choices</a>
         <span>© 1996-2023, Amazon.com, Inc. or its affiliates</span>
     </div>
-    
 
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </body>
 
 </html>
