--- a/Projects/amazon clone/index.html
+++ b/Projects/amazon clone/index.html
@@ -80,14 +80,12 @@
 
     <!-- hero-section -->
     <!-- Flickity HTML init -->
-    <!-- <div class="carousel" data-flickity='{ "autoPlay": true }'> -->
-    <!-- <div class="carousel-cell"><img src="1.jpg" alt=""  ></div>
-    <div class="carousel-cell"><img src="2.jpg" alt="" ></div>
-    <div class="carousel-cell"><img src="3.jpg" alt="" ></div>
-    <div class="carousel-cell"><img src="4.jpg" alt="" ></div> -->
-
-
-    </div>
+    <!-- <div class="carousel" data-flickity='{ "autoPlay": true }'>
+        <div class="carousel-cell"><img src="1.jpg" alt=""></div>
+        <div class="carousel-cell"><img src="2.jpg" alt=""></div>
+        <div class="carousel-cell"><img src="3.jpg" alt=""></div>
+        <div class="carousel-cell"><img src="4.jpg" alt=""></div>
+    </div> -->
 
     <div class="hero-section">
         <div class="hero-msg">
