practice if else

--- a/Javascript/practise_js/3.if else practce3.html
+++ b/Javascript/practise_js/3.if else practce3.html
@@ -94,21 +94,61 @@
         }
 
 
-        // practic prompt and alert 
-        var sub_time = prompt("hey waht is subject time: ")
+        // practic prompt and alert time
+        // var sub_time = prompt("hey waht is subject time: ")
 
-        if ( sub_time > 10 && sub_time < 12){
-            alert("this time Lecture is english subject")
+        // if ( sub_time > 10 && sub_time < 12){
+        //     alert("this time Lecture is english subject")
+        // }
+        // else if( sub_time > 12 && sub_time < 15){
+        //     alert("this time Lecture is marathi subject")
+        // }
+        // else if (sub_time == 16){
+        //     alert("This time is kecture is science subject")
+        // }
+        // else{
+        //     alert("this is branck time")
+        // }
+
+        // practice day 25-12
+        // Q1 time set massage
+
+
+        let time = prompt("hey what time it is ?");
+
+        if (time > 6 && time < 12){
+            alert("Good Morning")
         }
-        else if( sub_time > 12 && sub_time < 15){
-            alert("this time Lecture is marathi subject")
+        else if (time > 12 && time < 16) {
+            alert("Good afternoon");
         }
-        else if (sub_time == 16){
-            alert("This time is kecture is science subject")
+        else if (time > 16 && time < 22 ){
+            alert("good evening")
         }
         else{
-            alert("this is branck time")
+            alert("Good Night")
         }
+
+
+
+        // Q2 tempreture
+
+        let tempreture = 25;
+
+        if (tempreture > 30 && tempreture < 35){
+            console.log("it is hot");
+        }
+        else if (tempreture > 35 && tempreture < 50){
+            console.log("it is weather very hot");
+        }
+        else{
+            console.log("weather is cool");
+        }
+
+
+
+
+
 
 
 
