practice if else

--- a/Javascript/practise_js/3.if else practce3.html
+++ b/Javascript/practise_js/3.if else practce3.html
@@ -179,7 +179,7 @@
         }
 
         //    nested if statement 
-        
+
         let isWeekend = true;
         let timeOfDay = "morning";
 
@@ -192,6 +192,21 @@
         } else {
             console.log("It's a weekday.");
         }
+
+
+
+        let aa = 100;
+        let bb = 120;
+        
+        if (bb) {
+            if (aa === 100) {
+                console.log("match");
+            } else {
+                console.log("not match");
+            }
+        } else{
+            console.log("greter then 100");
+        };
 
 
 
