practice loop and contional statement

--- a/Javascript/practise_js/5. for loops.html
+++ b/Javascript/practise_js/5. for loops.html
@@ -39,9 +39,38 @@
 
         // example 4
         for (let i = 0; i < 10; i++) {
-            if (i % 2 !=0)
+            if (i % 2 != 0)
                 console.log("nameshte world")
         }
+
+
+
+        // day 2
+
+        // 1. basic of loop
+        for (var i = 0; i < 10; i++) {
+            console.log(i);
+        }
+
+        // 2. for loop- even numbers
+        for(let i =0; i <= 20; i += 2){
+            console.log(i);
+        }
+
+        // 3. for loop- countdown
+        for (let a = 10; a > 0; a--){
+            console.log(a);
+        }
+
+        //4. nested for loop
+
+        for (let i = 0; i<5; i++){
+            for (let j = 0; j < 5; j++){
+                console.log(i,j)
+            }
+        }
+
+       
 
 
 
