--- a/Projects/project 3/project3.html
+++ b/Projects/project 3/project3.html
@@ -12,31 +12,70 @@
 <body>
     <div class="main">
         <div class="page1">
-            <!-- navbar -->
             <div id="nav">
                 <img src="https://d33wubrfki0l68.cloudfront.net/439bf938233c24af021ffe6d206cd42f546e1143/ff4ed/assets/logo.svg"
                     alt="">
-            
-            <div id="nav-part2">
-                <h4>Home</h4>
-                <h4>Work</h4>
-                <h4>Stodio</h4>
-                <h4>Contact</h4>
+                <div id="nav-part2">
+                    <h4>Home</h4>
+                    <h4>Work</h4>
+                    <h4>Stodio</h4>
+                    <h4>Contact</h4>
+                </div>
+                <div id="nav-part3">
+                    <div id="circle">
+
+                    </div>
+                </div>
             </div>
-            <div id="nav-part3">
-                <div id="circle"></div>
+            <h1>Digitally crafted</h1>
+            <h2>Brand Experiences</h2>
+            <video autoplay loop muted src="production_id_4828605 (2160p).mp4"></video>
+        </div>
+        <div class="page2">
+            <h1>We are Duo Stodio,</h1>
+            <div class="page2-contaner">
+                <div class="page2-left">
+                    <h2>A CREATIVE COLLECTIVE MADE TO UNLOCK YOUR'S BRAND'S POTENTIAL</h2>
+                </div>
+                <div class="page2-right">
+                    <P>We weave together bold strategy and creative execution to produce thought-provoking digital
+                        experiences. We take a highly personalized approach to delivering branding, web design, and
+                        content marketing solutions. Born in the DC area - now serving clients worldwide.</P>
+
+                    <button>About us</button>
+                </div>
             </div>
         </div>
-        <h1>Digitally crafted</h1>
-        <h2>Brand Experiences</h2>
-        <video autoplay loop muted src="istockphoto-683660120-640_adpp_is.mp4"></video>
+        <div class="page3">
+            <h1>Selected Works</h1>
+            <div class="page3-part1">
+                <img src="https://d33wubrfki0l68.cloudfront.net/aa3d2ff66de5f16336bd94fd68c3c2ce61e29f68/d5064/assets/home/home-casestudy-mgny.webp"
+                    alt="">
+                <video autoplay muted loop
+                    src="https://d33wubrfki0l68.cloudfront.net/a13ea7c2ca2f38134748966280e54af4340ce821/f976d/assets/home/projects_madegood-reduced.mp4"></video>
+            </div>
+            <div class="page3-part1">
+                <img src="https://d33wubrfki0l68.cloudfront.net/aa3d2ff66de5f16336bd94fd68c3c2ce61e29f68/d5064/assets/home/home-casestudy-mgny.webp"
+                    alt="">
+                <video autoplay muted loop
+                    src="https://d33wubrfki0l68.cloudfront.net/a13ea7c2ca2f38134748966280e54af4340ce821/f976d/assets/home/projects_madegood-reduced.mp4"></video>
+            </div>
+            <div class="page3-part2">
+                <h3>View All Projects</h3>
+                <h4>Discover</h4>
+            </div>
+
         </div>
     </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js" integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"
+        integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"
+        integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="project3.js"></script>
 </body>
 
