--- a/Projects/project 3/project3.html
+++ b/Projects/project 3/project3.html
@@ -29,7 +29,7 @@
             </div>
             <h1>Digitally crafted</h1>
             <h2>Brand Experiences</h2>
-            <video autoplay loop muted src="production_id_4828605 (2160p).mp4"></video>
+            <video autoplay loop muted src="istockphoto-683660120-640_adpp_is.mp4"></video>
         </div>
         <div class="page2">
             <h1>We are Duo Stodio,</h1>
