--- a/Projects/project 3/project3.html
+++ b/Projects/project 3/project3.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="cirsor"></div>
     <div class="main">
         <div class="page1">
             <div id="nav">
@@ -57,15 +58,73 @@
             <div class="page3-part1">
                 <img src="https://d33wubrfki0l68.cloudfront.net/aa3d2ff66de5f16336bd94fd68c3c2ce61e29f68/d5064/assets/home/home-casestudy-mgny.webp"
                     alt="">
-                <video autoplay muted loop
-                    src="https://d33wubrfki0l68.cloudfront.net/a13ea7c2ca2f38134748966280e54af4340ce821/f976d/assets/home/projects_madegood-reduced.mp4"></video>
+                <video autoplay muted loop src="https://d33wubrfki0l68.cloudfront.net/a13ea7c2ca2f38134748966280e54af4340ce821/f976d/assets/home/projects_madegood-reduced.mp4"></video>
             </div>
             <div class="page3-part2">
                 <h3>View All Projects</h3>
                 <h4>Discover</h4>
             </div>
-
         </div>
+        <div class="page4">
+            <div class="elem">
+                <img src="https://d33wubrfki0l68.cloudfront.net/3401770635e95968e300d88f8b9479ecbc008eeb/be2e5/assets/home/home-experience-1.webp" alt="">
+                <div class="text-div">
+                    <h1>Strategy</h1>
+                    <h1>Strategy</h1>
+                </div>
+                <img src="https://d33wubrfki0l68.cloudfront.net/188bb09da2a445d08ac5b4f706711772e50e8a17/e100a/assets/home/home-experience-2.webp"
+                alt="">
+            </div>
+            <div class="elem">
+                <img src="https://d33wubrfki0l68.cloudfront.net/3401770635e95968e300d88f8b9479ecbc008eeb/be2e5/assets/home/home-experience-1.webp" alt="">
+                <div class="text-div">
+                    <h1>Identity</h1>
+                    <h1>Identity</h1>
+                </div>
+                <img src="https://d33wubrfki0l68.cloudfront.net/188bb09da2a445d08ac5b4f706711772e50e8a17/e100a/assets/home/home-experience-2.webp"
+                alt="">
+            </div>
+            <div class="elem">
+                <img src="https://d33wubrfki0l68.cloudfront.net/3401770635e95968e300d88f8b9479ecbc008eeb/be2e5/assets/home/home-experience-1.webp" alt="">
+                <div class="text-div">
+                    <h1>Experience</h1>
+                    <h1>Experience</h1>
+                </div>
+                <img src="https://d33wubrfki0l68.cloudfront.net/188bb09da2a445d08ac5b4f706711772e50e8a17/e100a/assets/home/home-experience-2.webp"
+                alt="">
+            </div>
+        </div>
+        <div class="page5">
+            <h2>Mentions clients</h2>
+            <div class="box" data-imag="https://images.unsplash.com/photo-1682695796497-31a44224d6d6?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHx8">
+                <h3>Verizon</h3>
+                <h4>2023</h4>
+            </div>
+            <div class="box" data-imag="https://images.unsplash.com/photo-1704072384017-788b1ccbaae5?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzfHx8ZW58MHx8fHx8">
+                <h3>Verizon</h3>
+                <h4>2023</h4>
+            </div>
+            <div class="box" data-imag="https://images.unsplash.com/photo-1682687220989-cbbd30be37e9?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHw2fHx8ZW58MHx8fHx8">
+                <h3>Verizon</h3>
+                <h4>2023</h4>
+            </div>
+            <div class="box" data-imag="https://images.unsplash.com/photo-1703967971243-c30bd410ed32?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzfHx8ZW58MHx8fHx8">
+                <h3>Verizon</h3>
+                <h4>2023</h4>
+            </div>
+            <div class="box" data-imag="https://images.unsplash.com/photo-1696418769815-da48c2ee41d6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMHx8fGVufDB8fHx8fA%3D%3D">
+                <h3>Verizon</h3>
+                <h4>2023</h4>
+            </div>
+            <div class="box boxl" data-imag="https://images.unsplash.com/photo-1703994643681-502adbf08489?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8">
+                <h3>Verizon</h3>
+                <h4>2023</h4>
+            </div>
+            
+            
+        </div>
+        <footer></footer>
+
     </div>
 
 
