--- a/Projects/project 3/project3.html
+++ b/Projects/project 3/project3.html
@@ -96,27 +96,27 @@
         </div>
         <div class="page5">
             <h2>Mentions clients</h2>
-            <div class="box" data-imag="https://images.unsplash.com/photo-1682695796497-31a44224d6d6?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHx8">
+            <div class="box" data-image="https://d33wubrfki0l68.cloudfront.net/3401770635e95968e300d88f8b9479ecbc008eeb/be2e5/assets/home/home-experience-1.webp">
                 <h3>Verizon</h3>
                 <h4>2023</h4>
             </div>
-            <div class="box" data-imag="https://images.unsplash.com/photo-1704072384017-788b1ccbaae5?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzfHx8ZW58MHx8fHx8">
+            <div class="box" data-image="https://images.unsplash.com/photo-1704072384017-788b1ccbaae5?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzfHx8ZW58MHx8fHx8">
                 <h3>Verizon</h3>
                 <h4>2023</h4>
             </div>
-            <div class="box" data-imag="https://images.unsplash.com/photo-1682687220989-cbbd30be37e9?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHw2fHx8ZW58MHx8fHx8">
+            <div class="box" data-image="https://images.unsplash.com/photo-1682687220989-cbbd30be37e9?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHw2fHx8ZW58MHx8fHx8">
                 <h3>Verizon</h3>
                 <h4>2023</h4>
             </div>
-            <div class="box" data-imag="https://images.unsplash.com/photo-1703967971243-c30bd410ed32?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzfHx8ZW58MHx8fHx8">
+            <div class="box" data-image="https://images.unsplash.com/photo-1703967971243-c30bd410ed32?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzfHx8ZW58MHx8fHx8">
                 <h3>Verizon</h3>
                 <h4>2023</h4>
             </div>
-            <div class="box" data-imag="https://images.unsplash.com/photo-1696418769815-da48c2ee41d6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMHx8fGVufDB8fHx8fA%3D%3D">
+            <div class="box" data-image="https://images.unsplash.com/photo-1696418769815-da48c2ee41d6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMHx8fGVufDB8fHx8fA%3D%3D">
                 <h3>Verizon</h3>
                 <h4>2023</h4>
             </div>
-            <div class="box boxl" data-imag="https://images.unsplash.com/photo-1703994643681-502adbf08489?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8">
+            <div class="box boxl" data-image="https://images.unsplash.com/photo-1703994643681-502adbf08489?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHx8">
                 <h3>Verizon</h3>
                 <h4>2023</h4>
             </div>
