practice of html css js

--- a/Projects/portfolio project/index.html
+++ b/Projects/portfolio project/index.html
@@ -91,24 +91,37 @@
         <div class="contener4">
             <div class="project">
                 <img src="2.jpg" alt="">
-                <h2>Project one</h2>
+                <h2><a href="https://github.com/shubhammeshram579?tab=repositories" target="_blank">Project 1</a></h2>
+                <button><a href="https://github.com/shubhammeshram579?tab=repositories" target="_blank">Github</a></button>
+                <button>Live Demo</button>
+            </div>
+            <div class="project">
+                <img src="2.jpg" alt="">
+                <h2>Project 2</h2>
                 <button>Github</button>
                 <button>Live Demo</button>
             </div>
             <div class="project">
                 <img src="2.jpg" alt="">
-                <h2>Project two</h2>
-                <button>Github</button>
-                <button>Live Demo</button>
-            </div>
-            <div class="project">
-                <img src="2.jpg" alt="">
-                <h2>Project three</h2>
+                <h2>Project 3</h2>
                 <button>Github</button>
                 <button>Live Demo</button>
             </div>
         </div>
     </div>
+    <div class="page5">
+        <h2>Get in Touch <span>Contract Me</span></h2>
+        <div class="contract">
+            <h3>Shubhammeshram579@gmail.com</h3>
+            <h3>Linkedin</h3>
+        </div>
+    </div>
+    <footer>
+        <h4>About</h4>
+        <h4>Exprience</h4>
+        <h4>Projects</h4>
+        <h4>Contact</h4>
+    </footer>
 
 
 
