--- a/Javascript/JAVASCRIPT/DOM in js/dom projects/project 2/project 2.html
+++ b/Javascript/JAVASCRIPT/DOM in js/dom projects/project 2/project 2.html
@@ -13,24 +13,28 @@
 </head>
 
 <body>
-    <i class="fa-solid fa-heart"></i>
+    <!-- conteiner 1 -->
     <div class="conteiner">
 
+        <!-- profile conteiner 2 -->
         <div class="profile">
             <i class="fa-brands fa-instagram"></i>
             <h1>Shubham Meshram</h1>
             <i class="fa-solid fa-ellipsis"></i>
         </div>
+
+        <!-- image and hard icon conteiner 3 -->
         <div class="contener2">
             <img src="2.jpg" alt="">
             <i class="fa-solid fa-heart"></i>
         </div>
-        <!-- <i class="ri-heart-line"></i> -->
+        <!-- other icons  -->
         <i class="ri-heart-3-fill"></i>
         <i class="ri-chat-3-line"></i>
         <i class="ri-share-forward-line"></i>
         <i class="fa-regular fa-bookmark"></i>
 
+        <!-- post summary -->
         <div id="summary">
             <div class="likes"><img class="image3" src="2.jpg" alt="">
                 <h4>1,230 likes</h4>
