--- a/Javascript/practise_js/Revision Basic HTML CSS JS/day1.html
+++ b/Javascript/practise_js/Revision Basic HTML CSS JS/day1.html
@@ -96,6 +96,30 @@
         ol li.a {
             background-color: brown;
         }
+
+
+        /* table staling */
+
+        table,td,th{
+            border: 2px solid black;
+            border-collapse: collapse;
+            padding: 10px;
+            margin-left: 50%;
+        }
+
+
+        table th{
+            background-color: rgba(18, 18, 133, 0.477);
+            text-transform: capitalize;
+            text-shadow: 1px 1px rgb(0, 183, 255);
+            text-decoration: underline;
+            padding-right: 100px;
+            padding-left: 100px;
+        }
+
+        table td{
+            background-color: aquamarine;
+        }
     </style>
 </head>
 
@@ -158,7 +182,7 @@
             </tr>
         </body>
         <tfoot>
-            <td colspan="2">total 3 list</td>
+            <th colspan="2">total 3 list</th>
         </tfoot>
     </table>
     <hr>
@@ -293,7 +317,7 @@
             age: 25,
         };
 
-        console.log(obj.name);
+        // console.log(obj.name);
 
         for (var i in obj) {
             console.log(i, obj[i]);
@@ -303,6 +327,41 @@
 
         // function
 
+        let fa = 12;
+        let fb = 100;
+
+        function fafb(fa,fb){
+            return fa + fb;
+        }
+
+        console.log(fafb(12,44));
+
+
+        // Basic Addition Function
+
+        function sum1(a,b){
+            var sum = a + b;
+            return sum;
+        }
+
+        console.log(sum1(12,12));
+        console.log(sum1(200, 22));
+
+
+        // Function with Default Parameter
+        function greet( name = "guest"){
+            return "hello"+" " + name + "!"
+        };
+
+        console.log(greet());
+        console.log(greet("shubham"));
+
+        // Function with Multiple Parameters
+        function multiplepra(pra1 , pra2){
+            return pra1 * pra2;
+        }
+
+        console.log(multiplepra(2,10))
 
     </script>
 </body>
