--- a/Projects/project 4/index.html
+++ b/Projects/project 4/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="nav">
         <div class="nav-part1">
-            <svg class="logo" width="106" height="83" viewBox="0 0 106 83" fill="none"
+            <svg id="svg1" class="logo" width="106" height="83" viewBox="0 0 106 83" fill="none"
                 xmlns="http://www.w3.org/2000/svg" style="transform: translate(0px, 0px);">
                 <g clip-path="url(#clip0_2228_162)">
                     <path d="M5.50062 6.4473H0V0.557617H17.7807V6.4473H12.2464V25.4842H5.50062V6.4473Z"
@@ -53,7 +53,7 @@
                     </clipPath>
                 </defs>
             </svg>
-            <svg id="twogoodlogo" width="62" height="63" viewBox="0 0 62 63" fill="none"
+            <svg class="svg2" id="twogoodlogo" width="62" height="63" viewBox="0 0 62 63" fill="none"
                 xmlns="http://www.w3.org/2000/svg" class="go1438215768" style="transform: translate(0px, 0px);">
                 <path
                     d="M46.8316 0C42.9105 0 39.1501 1.59236 36.3775 4.42677C33.605 7.26119 32.0474 11.1055 32.0474 15.114C32.0474 19.1224 33.605 22.9667 36.3775 25.8011C39.1501 28.6355 42.9105 30.2279 46.8316 30.2279C50.7526 30.2279 54.513 28.6355 57.2856 25.8011C60.0582 22.9667 61.6158 19.1224 61.6158 15.114C61.6158 11.1055 60.0582 7.26119 57.2856 4.42677C54.513 1.59236 50.7526 0 46.8316 0Z"
@@ -79,11 +79,130 @@
 
             </div>
             <div class="icon">
-                <i class="ri-menu-line"></i>
-                <i class="ri-shopping-cart-2-line"></i>
+                <button class="close"><i class="ri-menu-line"></i></button>
+                <button><i class="ri-shopping-cart-2-line"></i></button>
             </div>
 
 
+        </div>
+
+    </div>
+    <div class="menu">
+        <div class="cardx">
+            <h3>CONNECT WITH US</h3>
+            <ul>
+                <li>Facebook</li>
+                <li>Instagram</li>
+                <li>Twitter</li>
+                <li>LinkedIn</li>
+                <li>YouTube</li>
+            </ul>
+        </div>
+        <div class="cardy">
+
+            <h3>NITTY GRITTIES</h3>
+            <ul>
+                <li>Good Things FAQs</li>
+                <li>Good Food FAQs</li>
+                <li>Good Places</li>
+                <li>Pathways</li>
+                <li>Careers</li>
+            </ul>
+        </div>
+        <div class="cardz">
+            <h3>Get started</h3>
+            <ul>
+                <li>Pathways</li>
+                <li>Careers</li>
+            </ul>
+        </div>
+        <div class="bar">
+            <ul>
+                <li>shop</li>
+                <li>catering<i class="ri-arrow-right-up-line"></i></li>
+                <li>impact</li>
+                <li>stories</li>
+                <li>about</li>
+                <li>Contact</li>
+                <li>Donate</li>
+                <li>Sign in</li>
+            </ul>
+        </div>
+    </div>
+    <div class="card-details">
+        <h1>Your card is empaty</h1>
+        <h2>See All Good Things</h2>
+        <div id="cardpage">
+            <div id="scroller">
+                <div id="scroller-in">
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                </div>
+                <div id="scroller-in">
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                </div>
+                <div id="scroller-in">
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                    <h4>Card</h4>
+                </div>
+            </div>
+        </div>
+        <div id="cardpage2">
+            <div id="scroller2">
+                <div id="scroller-in2">
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                </div>
+                <div id="scroller-in2">
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                </div>
+                <div id="scroller-in2">
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                    <h4>empty</h4>
+                </div>
+            </div>
         </div>
 
     </div>
@@ -104,23 +223,70 @@
                 <img data-scroll data-scroll-speed="2"
                     src="https://cdn.sanity.io/images/w8f1ak3c/production/a54b969c847029357a401e2d8ea5d52abd5451d0-2250x1500.jpg/DSC0051_Dexter%20Kim%20copy.jpg?rect=675,0,900,1500&w=1024&h=1707&fit=min&auto=format"
                     alt="">
-                <div data-scroll data-scroll-speed="-1" class="dets">
-                    <ul>
-                        <li>Shop <span>Messina</span> <span>></span></li>
-                    </ul>
+                <div class="contener1">
+                    <div data-scroll data-scroll-speed="-1" class="dets">
+                        <ul>
+                            <li>SHOP <span>MESSINA</span> <span>></span></li>
+                        </ul>
+                        <div class="box">
+                            <img src="https://cdn.sanity.io/images/w8f1ak3c/production/6a73d4df28963d86c7f9dd49f805b8ec84774bd5-4672x7008.png/DSC0069_Dexter%20Kim%20copy.png?rect=0,755,4672,5326&fp-x=0.5&fp-y=0.4669448529411765&w=640&h=730&fit=crop&crop=focalpoint&auto=format"
+                                alt="">
+                            <img src="https://cdn.sanity.io/images/w8f1ak3c/production/d6c7e5bbcf3445fccb7e221bc5b1b9fd94d83362-5000x5000.png/DSC0032_Dexter%20Kim.png?w=640&h=640&auto=format"
+                                alt="">
+                        </div>
+                        <div class="box2">
+                            <h5>MASSINA X TO GOOD TO MISS CHOCLATE BROWING BAR </h5>
+                            <h5>THE INSIDE SCOOP GOOD FEEL CRACKERS SET</h5>
+                        </div>
+                    </div>
                 </div>
+
             </div>
             <div class="elem elem2">
                 <img data-scroll data-scroll-speed="2"
                     src="https://cdn.sanity.io/images/w8f1ak3c/production/bc3f529e3f10086db91822f615caf549a260362d-1500x2250.jpg/DSC0083_Dexter%20Kim.jpg?rect=75,0,1350,2250&w=1024&h=1707&fit=min&auto=format"
                     alt="">
-                <div data-scroll data-scroll-speed="-1" class="dets"></div>
+                <div class="cotener2">
+                    <div data-scroll data-scroll-speed="-1" class="dets">
+                        <ul>
+                            <li>SHOP <span id="gifts">GIFTS FOR GOOD</span> <span>></span></li>
+                        </ul>
+                        <div class="box">
+                            <img src="https://cdn.sanity.io/images/w8f1ak3c/production/3ab2d63c7e5ce5b1d39a1880e2a274771573ccbe-5000x5000.png/DSC0058_Dexter%20Kim.png?w=640&h=640&auto=format"
+                                alt="">
+                            <img src="https://cdn.sanity.io/images/w8f1ak3c/production/f1fa7f03dfd062ba551730e16a75d682058e6ed8-6241x4161.png/DSC0002_Dexter%20Kim.png?rect=1528,1412,3676,2727&fp-x=0.5393835616438357&fp-y=0.667119173968489&w=640&h=475&fit=crop&crop=focalpoint&auto=format"
+                                alt="">
+                        </div>
+                        <div class="box2">
+                            <h5>THE CANDLE-LIT DINER KIT </h5>
+                            <h5>T TOTALER X TWO GOOD NAIVE TEA</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="elem elem3">
                 <img data-scroll data-scroll-speed="2"
                     src="https://cdn.sanity.io/images/w8f1ak3c/production/d3151106849ff2494d66916cf554c68a0603444d-902x1500.png/Rectangle%20220.png?rect=1,0,900,1500&w=640&h=1067&fit=min&auto=format"
                     alt="">
-                <div data-scroll data-scroll-speed="-1" class="dets"></div>
+                <div class="contener3">
+                    <div data-scroll data-scroll-speed="-1" class="dets">
+                        <ul>
+                            <li>SHOP <span>BATH</span> <span>></span></li>
+                        </ul>
+                        <div class="box">
+                            <img id="botel"
+                                src="https://cdn.sanity.io/images/w8f1ak3c/production/63474079ab0c7723b75bd63b24d8bbc652349640-1408x1408.png/Cleanse%20&%20Nourish%20Hand%20Wash%20Two%20Good%20Co.png?rect=0,117,1408,1291&fp-x=0.5&fp-y=0.5416666666666666&w=640&h=587&fit=crop&crop=focalpoint&auto=format"
+                                alt="">
+                            <img id="botel"
+                                src="https://cdn.sanity.io/images/w8f1ak3c/production/99866b12faf44f7490e6037dc197947334ce0a72-1408x1408.png/Nourish%20&%20Soothe%20Hand%20Lotion%20Two%20Good%20Co.png?w=640&h=640&auto=format"
+                                alt="">
+                        </div>
+                        <div class="box2">
+                            <h5>CLEANSE & NAURISH HAND WASH </h5>
+                            <h5>NAURISH & SOOTHE HAND LOTION</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="page3">
@@ -170,10 +336,10 @@
                     and nurture a sense of self-worth for those on the path of healing.</h3>
                 <h4>HERE'S HOW WE DO IT</h4>
             </div>
-            <img data-scroll data-scroll-speed="1"
+            <img data-scroll data-scroll-speed="2"
                 src="https://cdn.sanity.io/images/w8f1ak3c/production/943f8f43b76b4e030f41deddca1edd44170fee39-5504x8256.jpg/Christina-Maria-Jes-Lindsay-9143.jpg?fp-x=0.5&fp-y=0.5&w=640&h=947&fit=crop&crop=focalpoint&auto=format"
                 alt="">
-            <img data-scroll data-scroll-speed="1"
+            <img data-scroll data-scroll-speed="2"
                 src="https://cdn.sanity.io/images/w8f1ak3c/production/84da7b8b510e006ce0ca22769d93bb6c044945f6-5504x8256.jpg/Patricia-Work-Work-Good-Stories-Two-Good-Co.jpg?rect=0,56,5504,8144&w=640&h=947&fit=min&auto=format"
                 alt="">
         </div>
@@ -185,49 +351,56 @@
         </div>
         <div class="page6">
             <div class="card1 card">
-            <h3>CONNECT WITH US</h3>
-            <ul>
-                <li>Facebook</li>
-                <li>Instagram</li>
-                <li>Twitter</li>
-                <li>LinkedIn</li>
-                <li>YouTube</li>
-            </ul>
-        </div>
+                <h3>CONNECT WITH US</h3>
+                <ul>
+                    <li>Facebook</li>
+                    <li>Instagram</li>
+                    <li>Twitter</li>
+                    <li>LinkedIn</li>
+                    <li>YouTube</li>
+                </ul>
+            </div>
             <div class="imagcon">
                 <svg id="twogoodlogo" width="62" height="63" viewBox="0 0 62 63" fill="none"
-                xmlns="http://www.w3.org/2000/svg" class="go1438215768" style="transform: translate(0px, 0px);">
-                <path
-                    d="M46.8316 0C42.9105 0 39.1501 1.59236 36.3775 4.42677C33.605 7.26119 32.0474 11.1055 32.0474 15.114C32.0474 19.1224 33.605 22.9667 36.3775 25.8011C39.1501 28.6355 42.9105 30.2279 46.8316 30.2279C50.7526 30.2279 54.513 28.6355 57.2856 25.8011C60.0582 22.9667 61.6158 19.1224 61.6158 15.114C61.6158 11.1055 60.0582 7.26119 57.2856 4.42677C54.513 1.59236 50.7526 0 46.8316 0Z"
-                    fill="currentColor"></path>
-                <path
-                    d="M14.793 0C10.872 0 7.11154 1.59236 4.33897 4.42677C1.56639 7.26119 0.00878906 11.1055 0.00878906 15.114C0.00878906 19.1224 1.56639 22.9667 4.33897 25.8011C7.11154 28.6355 10.872 30.2279 14.793 30.2279C18.714 30.2279 22.4744 28.6355 25.247 25.8011C28.0196 22.9667 29.5772 19.1224 29.5772 15.114C29.5772 11.1055 28.0196 7.26119 25.247 4.42677C22.4744 1.59236 18.714 0 14.793 0Z"
-                    fill="currentColor"></path>
-                <path d="M36.9805 32.7422L32.0366 37.7963L56.6819 62.9913L61.6258 57.9372L36.9805 32.7422Z"
-                    fill="currentColor"></path>
-                <path d="M56.6836 32.7485L32.0383 57.9435L36.9822 62.9976L61.6275 37.8026L56.6836 32.7485Z"
-                    fill="currentColor"></path>
-                <path d="M4.94386 32.7464L0 37.8005L24.6453 62.9955L29.5892 57.9414L4.94386 32.7464Z"
-                    fill="currentColor"></path>
-                <path d="M24.647 32.7527L0.00170898 57.9477L4.94557 63.0018L29.5909 37.8068L24.647 32.7527Z"
-                    fill="currentColor"></path>
-            </svg>
-                
+                    xmlns="http://www.w3.org/2000/svg" class="go1438215768" style="transform: translate(0px, 0px);">
+                    <path
+                        d="M46.8316 0C42.9105 0 39.1501 1.59236 36.3775 4.42677C33.605 7.26119 32.0474 11.1055 32.0474 15.114C32.0474 19.1224 33.605 22.9667 36.3775 25.8011C39.1501 28.6355 42.9105 30.2279 46.8316 30.2279C50.7526 30.2279 54.513 28.6355 57.2856 25.8011C60.0582 22.9667 61.6158 19.1224 61.6158 15.114C61.6158 11.1055 60.0582 7.26119 57.2856 4.42677C54.513 1.59236 50.7526 0 46.8316 0Z"
+                        fill="currentColor"></path>
+                    <path
+                        d="M14.793 0C10.872 0 7.11154 1.59236 4.33897 4.42677C1.56639 7.26119 0.00878906 11.1055 0.00878906 15.114C0.00878906 19.1224 1.56639 22.9667 4.33897 25.8011C7.11154 28.6355 10.872 30.2279 14.793 30.2279C18.714 30.2279 22.4744 28.6355 25.247 25.8011C28.0196 22.9667 29.5772 19.1224 29.5772 15.114C29.5772 11.1055 28.0196 7.26119 25.247 4.42677C22.4744 1.59236 18.714 0 14.793 0Z"
+                        fill="currentColor"></path>
+                    <path d="M36.9805 32.7422L32.0366 37.7963L56.6819 62.9913L61.6258 57.9372L36.9805 32.7422Z"
+                        fill="currentColor"></path>
+                    <path d="M56.6836 32.7485L32.0383 57.9435L36.9822 62.9976L61.6275 37.8026L56.6836 32.7485Z"
+                        fill="currentColor"></path>
+                    <path d="M4.94386 32.7464L0 37.8005L24.6453 62.9955L29.5892 57.9414L4.94386 32.7464Z"
+                        fill="currentColor"></path>
+                    <path d="M24.647 32.7527L0.00170898 57.9477L4.94557 63.0018L29.5909 37.8068L24.647 32.7527Z"
+                        fill="currentColor"></path>
+                </svg>
+
+
             </div>
             <div class="card2 card">
-            <h3>THE NITTY GRITTIES</h3>
-            <ul>
-                <li>Good Things FAQs</li>
-                <li>Good Food FAQs</li>
-                <li>Good Places</li>
-                <li>Pathways</li>
-                <li>Careers</li>
-            </ul>
-        </div>
+                <h3>THE NITTY GRITTIES</h3>
+                <ul>
+                    <li>Good Things FAQs</li>
+                    <li>Good Food FAQs</li>
+                    <li>Good Places</li>
+                    <li>Pathways</li>
+                    <li>Careers</li>
+                </ul>
+            </div>
         </div>
         <div class="page6-part2">
-            <h3>© TWO GOOD CO.2024  TERMS OF USE   PRIVACY POLICY</h3>
-            <h4>We are proud and privileged to have our home on this land, and to be able to continue the long tradition of community coming together around food, begun thousands of years ago by First Nations peoples. As we stand together on this unceded land, we acknowledge our First Nations people, are the original custodians of this land, and we recognise their deep connection to land, water, sky and community which continues today. We pay our deep respects to community elders, past, present and emerging, for they hold the memories, the traditions, the culture and hopes of Aboriginal and Torres Strait Islander peoples. Always was, always will be Aboriginal land.</h4>
+            <h3>© TWO GOOD CO.2024 TERMS OF USE PRIVACY POLICY</h3>
+            <h4>We are proud and privileged to have our home on this land, and to be able to continue the long tradition
+                of community coming together around food, begun thousands of years ago by First Nations peoples. As we
+                stand together on this unceded land, we acknowledge our First Nations people, are the original
+                custodians of this land, and we recognise their deep connection to land, water, sky and community which
+                continues today. We pay our deep respects to community elders, past, present and emerging, for they hold
+                the memories, the traditions, the culture and hopes of Aboriginal and Torres Strait Islander peoples.
+                Always was, always will be Aboriginal land.</h4>
         </div>
 
     </div>
