--- a/Projects/project 4/index.html
+++ b/Projects/project 4/index.html
@@ -88,33 +88,35 @@
 
     </div>
     <div class="menu">
-        <div class="cardx">
-            <h3>CONNECT WITH US</h3>
-            <ul>
-                <li>Facebook</li>
-                <li>Instagram</li>
-                <li>Twitter</li>
-                <li>LinkedIn</li>
-                <li>YouTube</li>
-            </ul>
-        </div>
-        <div class="cardy">
+        <div class="contenercardx">
+            <div class="cardx">
+                <h3>CONNECT WITH US</h3>
+                <ul>
+                    <li>Facebook</li>
+                    <li>Instagram</li>
+                    <li>Twitter</li>
+                    <li>LinkedIn</li>
+                    <li>YouTube</li>
+                </ul>
+            </div>
+            <div class="cardy">
 
-            <h3>NITTY GRITTIES</h3>
-            <ul>
-                <li>Good Things FAQs</li>
-                <li>Good Food FAQs</li>
-                <li>Good Places</li>
-                <li>Pathways</li>
-                <li>Careers</li>
-            </ul>
-        </div>
-        <div class="cardz">
-            <h3>Get started</h3>
-            <ul>
-                <li>Pathways</li>
-                <li>Careers</li>
-            </ul>
+                <h3>NITTY GRITTIES</h3>
+                <ul>
+                    <li>Good Things FAQs</li>
+                    <li>Good Food FAQs</li>
+                    <li>Good Places</li>
+                    <li>Pathways</li>
+                    <li>Careers</li>
+                </ul>
+            </div>
+            <div class="cardz">
+                <h3>Get started</h3>
+                <ul>
+                    <li>Pathways</li>
+                    <li>Careers</li>
+                </ul>
+            </div>
         </div>
         <div class="bar">
             <ul>
@@ -249,7 +251,7 @@
                 <div class="cotener2">
                     <div data-scroll data-scroll-speed="-1" class="dets">
                         <ul>
-                            <li>SHOP <span id="gifts">GIFTS FOR GOOD</span> <span>></span></li>
+                            <li>SHOP <span id="gifts">GIFTS FOR GOOD</span><span class="arrow">></span></li>
                         </ul>
                         <div class="box">
                             <img src="https://cdn.sanity.io/images/w8f1ak3c/production/3ab2d63c7e5ce5b1d39a1880e2a274771573ccbe-5000x5000.png/DSC0058_Dexter%20Kim.png?w=640&h=640&auto=format"
@@ -336,12 +338,14 @@
                     and nurture a sense of self-worth for those on the path of healing.</h3>
                 <h4>HERE'S HOW WE DO IT</h4>
             </div>
-            <img data-scroll data-scroll-speed="2"
-                src="https://cdn.sanity.io/images/w8f1ak3c/production/943f8f43b76b4e030f41deddca1edd44170fee39-5504x8256.jpg/Christina-Maria-Jes-Lindsay-9143.jpg?fp-x=0.5&fp-y=0.5&w=640&h=947&fit=crop&crop=focalpoint&auto=format"
-                alt="">
-            <img data-scroll data-scroll-speed="2"
-                src="https://cdn.sanity.io/images/w8f1ak3c/production/84da7b8b510e006ce0ca22769d93bb6c044945f6-5504x8256.jpg/Patricia-Work-Work-Good-Stories-Two-Good-Co.jpg?rect=0,56,5504,8144&w=640&h=947&fit=min&auto=format"
-                alt="">
+            <div class="storyimg">
+                <img data-scroll data-scroll-speed="2"
+                    src="https://cdn.sanity.io/images/w8f1ak3c/production/943f8f43b76b4e030f41deddca1edd44170fee39-5504x8256.jpg/Christina-Maria-Jes-Lindsay-9143.jpg?fp-x=0.5&fp-y=0.5&w=640&h=947&fit=crop&crop=focalpoint&auto=format"
+                    alt="">
+                <img data-scroll data-scroll-speed="2"
+                    src="https://cdn.sanity.io/images/w8f1ak3c/production/84da7b8b510e006ce0ca22769d93bb6c044945f6-5504x8256.jpg/Patricia-Work-Work-Good-Stories-Two-Good-Co.jpg?rect=0,56,5504,8144&w=640&h=947&fit=min&auto=format"
+                    alt="">
+            </div>
         </div>
         <div class="page5">
             <div class="endpage">
@@ -401,6 +405,7 @@
                 continues today. We pay our deep respects to community elders, past, present and emerging, for they hold
                 the memories, the traditions, the culture and hopes of Aboriginal and Torres Strait Islander peoples.
                 Always was, always will be Aboriginal land.</h4>
+                <h4 class="GRAYSCALE">ACKNOWLEDGEMENT OF COUNTRY</h4>
         </div>
 
     </div>
