--- a/Projects/project 4/index.html
+++ b/Projects/project 4/index.html
@@ -72,16 +72,17 @@
             </svg>
         </div>
         <div class="nav-part2">
+            
             <div class="link">
                 <a href="#">Shop</a>
                 <a href="#">Catering <span><i class="ri-arrow-right-up-line"></i></span></a>
                 <a href="#">Donate</a>
-
+                <div class="icon">
+                    <i class="ri-menu-line"></i>
+                    <i class="ri-shopping-cart-2-line"></i>
+                </div>
             </div>
-            <div class="icon">
-                <button class="close"><i class="ri-menu-line"></i></button>
-                <button><i class="ri-shopping-cart-2-line"></i></button>
-            </div>
+            
 
 
         </div>
@@ -217,12 +218,16 @@
                 <p class="play">Play</p>
                 <video autoplay muted loop src="final.mp4"></video>
             </div>
+            <div class="hading">
+                <h5>BUT GOOD</h5>
+                <h5>DO GOOD</h5>
+            </div>
 
         </div>
 
         <div class="page2">
             <div class="elem elem1">
-                <img data-scroll data-scroll-speed="2"
+                <img data-scroll data-scroll-speed="1"
                     src="https://cdn.sanity.io/images/w8f1ak3c/production/a54b969c847029357a401e2d8ea5d52abd5451d0-2250x1500.jpg/DSC0051_Dexter%20Kim%20copy.jpg?rect=675,0,900,1500&w=1024&h=1707&fit=min&auto=format"
                     alt="">
                 <div class="contener1">
@@ -245,7 +250,7 @@
 
             </div>
             <div class="elem elem2">
-                <img data-scroll data-scroll-speed="2"
+                <img data-scroll data-scroll-speed="1"
                     src="https://cdn.sanity.io/images/w8f1ak3c/production/bc3f529e3f10086db91822f615caf549a260362d-1500x2250.jpg/DSC0083_Dexter%20Kim.jpg?rect=75,0,1350,2250&w=1024&h=1707&fit=min&auto=format"
                     alt="">
                 <div class="cotener2">
@@ -267,7 +272,7 @@
                 </div>
             </div>
             <div class="elem elem3">
-                <img data-scroll data-scroll-speed="2"
+                <img data-scroll data-scroll-speed="1"
                     src="https://cdn.sanity.io/images/w8f1ak3c/production/d3151106849ff2494d66916cf554c68a0603444d-902x1500.png/Rectangle%20220.png?rect=1,0,900,1500&w=640&h=1067&fit=min&auto=format"
                     alt="">
                 <div class="contener3">
@@ -339,7 +344,7 @@
                 <h4>HERE'S HOW WE DO IT</h4>
             </div>
             <div class="storyimg">
-                <img data-scroll data-scroll-speed="2"
+                <img class="image1" data-scroll data-scroll-speed="2"
                     src="https://cdn.sanity.io/images/w8f1ak3c/production/943f8f43b76b4e030f41deddca1edd44170fee39-5504x8256.jpg/Christina-Maria-Jes-Lindsay-9143.jpg?fp-x=0.5&fp-y=0.5&w=640&h=947&fit=crop&crop=focalpoint&auto=format"
                     alt="">
                 <img data-scroll data-scroll-speed="2"
@@ -405,7 +410,7 @@
                 continues today. We pay our deep respects to community elders, past, present and emerging, for they hold
                 the memories, the traditions, the culture and hopes of Aboriginal and Torres Strait Islander peoples.
                 Always was, always will be Aboriginal land.</h4>
-                <h4 class="GRAYSCALE">ACKNOWLEDGEMENT OF COUNTRY</h4>
+            <h4 class="GRAYSCALE">ACKNOWLEDGEMENT OF COUNTRY</h4>
         </div>
 
     </div>
