--- a/CSS/8. Floats & Position Properties in css/position and zindex.html
+++ b/CSS/8. Floats & Position Properties in css/position and zindex.html
@@ -4,6 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .box{
+            height: 100px;
+            width: 100px;
+        }
+
+        body{
+            position: relative;
+        }
+
+        .box1{
+            background-color: green;
+            position: absolute;
+            z-index: -10;
+        }
+        .box2{
+            background-color:red;
+            position: absolute;
+            z-index: -10;
+        }
+        .box3{
+            background-color:yellow;
+        }
+    </style>
 </head>
 <body>
     <div class="box1 box">
