--- a/Projects/portfolio website/potfolio.html
+++ b/Projects/portfolio website/potfolio.html
@@ -5,7 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
     <style>
@@ -14,23 +21,26 @@
 </head>
 
 <body>
+    <video src="/img/back3.mp4" autoplay muted loop></video>
+
     <!-- navbar -->
     <nav>
         <div class="logo">
-            <h1>Shubhcode.</h1>
+            <h1>Shubh<span>code.</span></h1>
         </div>
         <div class="navbarname">
-            <h1>home</h1>
+            <h1 class="home">home</h1>
             <h1>about</h1>
-            <h1>Resume</h1>
+            <!-- <h1>Resume</h1> -->
             <h1>Project</h1>
             <h1>Contact</h1>
         </div>
     </nav>
 
 
-    <!-- page1 -->
+    <!-- home page -->
     <div class="contaner">
+
         <div class="card">
             <img src="/img/final image.png" alt="">
         </div>
@@ -42,13 +52,15 @@
             <button>Contact info</button>
         </div>
     </div>
+
+    <!-- about page -->
     <div class="page2">
         <div class="card">
             <img src="/img/2.png" alt="">
 
         </div>
         <div class="card2">
-            <h1>About Me</h1>
+            <h1 class="about-me">About Me</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam expedita, aliquid beatae neque sequi
                 consectetur iure quidem laudantium enim. Ab odio nesciunt iste aperiam vitae nihil voluptatum modi porro
                 eligendi, minus, fuga assumenda blanditiis repellat sint, hic exercitationem accusamus cupiditate. Rem
@@ -57,6 +69,7 @@
                 voluptates vel ullam delectus, at nisi itaque error cum sint nihil quod? Eligendi vero unde, sint
                 dolorum aliquid accusamus impedit illum debitis amet deserunt reprehenderit similique tempora nulla
                 expedita perspiciatis illo autem aperiam.</p>
+                <!-- skills section -->
             <div class="card3">
                 <h1 id="skills">Skills</h1>
                 <h1 id="Experience">Experience</h1>
@@ -71,54 +84,57 @@
 
                 </div>
                 <div class="skill2">
-                    <h3>Node.js</h3>
-                    <h3>Express.js</h3>
-                    <h3> <img src="/img/mongodb-svgrepo-com.svg" alt=""> Mongodb</h3>
+                    <h3><i class="fa-brands fa-node-js"></i> Node.js</h3>
+                    <h3><i class="fa-brands fa-js"></i> Express.js</h3>
+                    <h3><i class="fa-solid fa-database"></i> Mongodb</h3>
                 </div>
 
                 <div class="skill3">
-                    <h3>Mysql</h3>
+                    <h3><i class="fa-solid fa-database"></i> Mysql</h3>
                     <h3><i class="ri-git-merge-line"> </i>Git</h3>
                     <h3><i class="ri-github-fill"> </i>Github</h3>
                 </div>
             </div>
+            <!-- Experience section -->
             <div class="card5">
                 <div class="exp1">
-                    <h1>Tax executive</h1>
-                    <h2>TaxCPC - Unit of Figment Global Solutions </h2>
-                    <h2>Feb 2020 - Sep 2022 · 2 yrs 8 mos</h2>
+                    <h1>2020 - 2022</h1>
+                    <h2>Tax executive</h2>
+                    <h2>Figment Global Solutions pvt ltd </h2>
                     <h2>Nagpur, Maharashtra, India</h2>
                 </div>
                 <div class="exp2">
-                    <h1>Account Executive</h1>
-                    <h2>PVRS AND ASSOCIATES</h2>
-                    <h2>Dec 2018 - Jan 2020 · 1 yr 2 mos</h2>
+                    <h1>2018 - 2020</h1>
+                    <h2>Account Executive</h2>
+                    <h2>PVRS and Associates</h2>
                     <h2>Nagpur, Maharashtra, India</h2>
                 </div>
             </div>
+
             <div class="card6">
                 <div class="edu1">
-                    <h1>Dr. D. Y. Patil Institute of Technology, Pimpri, Pune</h1>
+                    <h1>2022 - 2024</h1>
                     <h2>MBA (AI-ML) </h2>
-                    <h2>Pursuing final year</h2>
+                    <h2>Dr. D. Y. Patil Vidhyapith, Pune</h2>
                 </div>
                 <div class="edu2">
-                    <h1>Nagpur University</h1>
+                    <h1>2016 - 2019</h1>
                     <h2>BCom (Accounting and Finance)</h2>
-                    <h2>jun 2016 - july 2019 </h2>
+                    <h2>Nagpur University</h2>
                 </div>
             </div>
         </div>
 
     </div>
-    <!-- page3   -->
+    <!-- project section -->
     <div class="page3">
         <h1>Projects</h1>
         <div class="contenar">
             <div class="cards">
                 <div class="card1" id="card1">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsum sapiente eaque ipsam eos
-                        quam aut iusto nihil officia quod! <button>link</button></p>
+                        quam aut iusto nihil officia quod! <a href="#"><i
+                                class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
                 </div>
 
 
@@ -126,7 +142,8 @@
             <div class="cards">
                 <div class="card1" id="card2">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsum sapiente eaque ipsam eos
-                        quam aut iusto nihil officia quod! <button>link</button></p>
+                        quam aut iusto nihil officia quod! <a href="#"><i
+                                class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
                 </div>
 
 
@@ -134,22 +151,25 @@
             <div class="cards">
                 <div class="card1" id="card3">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsum sapiente eaque ipsam eos
-                        quam aut iusto nihil officia quod! <button>link</button></p>
+                        quam aut iusto nihil officia quod! <a href="#"><i
+                                class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
                 </div>
 
 
             </div>
         </div>
-        <a href="#">More projects</a>
+        <div class="more">
+            <a class="more-p" href="#">More projects</a>
+        </div>
     </div>
-    <!-- page4   -->
+    <!-- contact page -->
     <div class="page4">
         <div class="cot1">
             <h1>contact me</h1>
             <div class="contact">
-            <i class="fa-solid fa-paper-plane"><a href="#"> shubhcode97@gmail.com</a></i>
-            <i class="fa-solid fa-phone"><a href="#">7038956822</a></i>
-        </div>
+                <i class="fa-solid fa-paper-plane"><a href="#"> shubhcode97@gmail.com</a></i>
+                <i class="fa-solid fa-phone"><a href="#">7038956822</a></i>
+            </div>
             <div class="socialmedia">
                 <i class="fa-brands fa-linkedin"></i>
                 <i class="fa-brands fa-twitter"></i>
@@ -160,16 +180,18 @@
 
         </div>
         <div class="cot2">
-            
+
             <input class="name-email" type="text" name="yourname" id="yourname" placeholder="   yourname">
             <input class="name-email" type="email" name="email" id="email" placeholder="  your email">
-            <textarea class="message" name="your message" id="" cols="30" rows="10" placeholder=" your message"></textarea>
+            <textarea class="message" name="your message" id="" cols="30" rows="10"
+                placeholder=" your message"></textarea>
             <input class="btn" type="submit">
-      
+
 
         </div>
 
     </div>
+
 
     </div>
 
