--- a/Projects/portfolio website/potfolio.html
+++ b/Projects/portfolio website/potfolio.html
@@ -47,9 +47,9 @@
             <div class="card2">
                 <h5 class="hello">Hello <span> I'm</span></h5>
                 <h5 class="name"> Shubham Meshram</h5>
-                <h5>Web Developer</h5>
-                <button>CV</button>
-                <button>Contact info</button>
+                <h5 class="job">Web Developer</h5>
+                <a href="/img/Shubham web developer final.pdf" download="cv">CV</a>
+                <a href="#">Github</a>
             </div>
         </div>
     </section>
@@ -226,8 +226,8 @@
 
         <!-- </div> -->
     </section>
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 
